--- a/index.Html
+++ b/index.Html
@@ -8,7 +8,7 @@
 <body>
   <p id="hello">hello </p>
   <p id="per">eryer</p>
-  <script src="27jan.js">
+  <script src="object.js">
   </script>
 
 </body>
