--- a/index.Html
+++ b/index.Html
@@ -6,9 +6,11 @@
   <title>Document</title>
 </head>
 <body>
+  <p id="demo">erg</p>  <button onclick="document.getElementById('demo').innerHTML = Date()">The time is?</button>
   <p id="hello">hello </p>
   <p id="per">eryer</p>
-  <script src="object.js">
+  <script src="String.js">
+  
   </script>
 
 </body>
