--- a/index.Html
+++ b/index.Html
@@ -9,7 +9,7 @@
   <p id="demo">erg</p>  <button onclick="document.getElementById('demo').innerHTML = Date()">The time is?</button>
   <p id="hello">hello </p>
   <p id="per">eryer</p>
-  <script src="number.js">
+  <script src="Array.js">
   
   </script>
 
