--- a/index.Html
+++ b/index.Html
@@ -9,16 +9,8 @@
   <p id="demo">erg</p>  
   <p id="hello">hello </p>
   <p id="per">eryer</p>
-  <script src="Array.js">
-  const numbers = [45, 4, 9, 16, 25];
+  <script src="set&map.js">
 
-let txt = "";
-numbers.forEach(myFunction);
-document.getElementById("demo").innerHTML = txt;
-
-function myFunction(value, index, array) {
-  txt += value + "<br>"; 
-}
   </script>
 
 </body>
