--- a/w3school/index.Html
+++ b/w3school/index.Html
@@ -9,7 +9,7 @@
   <p id="demo">erg</p>  
   <p id="hello">hello </p>
   <p id="per">eryer</p>
-  <script src="set&map.js">
+  <script src="Async.js">
 
   </script>
 
